# docker-emp-training

./: .gitignore  README.md
python-app/: Dockerfile  pyproject.toml
python-app/src/: main.py
